Update config file

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,5 @@
 title: Camilla Molina
+description: Data Science portfolio
 theme: jekyll-theme-minimal
 logo: /images/headshot.jpg
+show_downloads: true
